--- a/src/LarpManager/Views/admin/intrigue/list.twig
+++ b/src/LarpManager/Views/admin/intrigue/list.twig
@@ -61,6 +61,7 @@
 				<th>Date de mise à jour</th>
 				<th>Groupes concernés</th>
 				<th>Groupes Secondaires concernés</th>
+				<th>Documents concernés</th>
 				<th>Instances concernées</th>
 				<th></th>
 			</thead>
@@ -92,10 +93,19 @@
 					</td>
 					<td>
 						<ul>
+						{% for intrigueHasDocument in intrigue.intrigueHasDocuments %}
+							<li><a href="{{ path('document.detail', {'document': intrigueHasDocument.document.id}) }}">{{ intrigueHasDocument.document.titre }}</a></li> 
+						{% else %}
+							<li>Aucun</li>
+						{% endfor %}
+						</ul>
+					</td>
+					<td>
+						<ul>
 						{% for intrigueHasLieu in intrigue.intrigueHasLieus %}
 							<li><a href="{{ path('lieu.detail', {'lieu': intrigueHasLieu.lieu.id}) }}">{{ intrigueHasLieu.lieu.nom }}</a></li> 
 						{% else %}
-							<li>Aucun</li>
+							<li>Aucune</li>
 						{% endfor %}
 						</ul>
 					</td>
