Lien vers les vidéos de reègles

--- a/src/LarpManager/Views/rule/list.twig
+++ b/src/LarpManager/Views/rule/list.twig
@@ -26,6 +26,21 @@
 	</div>
 
 	<div class="panel panel-conan">
+		<div class="panel-heading">Liste des vidéos</div>
+		<div class="panel-body">
+			<div class="list-group">
+				<div class="list-group-item">
+					<h5 class="list-group-item-heading">Vidéos d'exemples de règles</h5>
+					<p class="list-group-item-text">&nbsp;</p>
+					<p class="list-group-item-text">Vous pourrez retrouver ici quelques vidéos de règles : <a href="https://www.youtube.com/watch?v=0xl5aw8zOiA&list=PLf4sB0v9r7NEAbDJME9RoWadn4mOGIKF3">Playlists des règles LH5</a>.</p>
+					<p class="list-group-item-text">&nbsp;</p>
+					<p class="list-group-item-text"><strong>LH6 :</strong> Remplacez les itérations de "Charme" par "Charisme" pour la vidéo en question à partir du LH6.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="panel panel-conan">
 		<div class="panel-heading">Liste des règles</div>
 		<div class="panel-body">
 			<div class="list-group">
@@ -46,5 +61,5 @@
 			</div>
 		</div>
 	</div>
-	
+
 {% endblock content %}
