--- a/src/LarpManager/Views/admin/personnage/detail.twig
+++ b/src/LarpManager/Views/admin/personnage/detail.twig
@@ -66,7 +66,7 @@
 		  					<p>Ce personnage {% if personnage.intrigue %}<strong class="text-success">participe aux intrigues</strong>{% else %}<strong class="text-danger">ne participe pas aux intrigues{% endif %}</strong>.</p>
 							{% if personnage.isSensible %}<p>Ce personnage est <strong class="text-success">sensible</strong>.
 							<a role="button" data-toggle="collapse" href="#sensibility" aria-expanded="false" aria-controls="collapseExample">
-								<i class="fa fa-question" aria-hidden="true"></i>
+								<i class="fa fa-info-circle" aria-hidden="true"></i>
 							</a>
 							<div class="collapse" id="sensibility">
 								<div class="list-group">
