--- a/src/LarpManager/Views/groupe/detail.twig
+++ b/src/LarpManager/Views/groupe/detail.twig
@@ -49,7 +49,7 @@
     						<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
 	    					Attention, ce groupe n'a pas de scénariste.
     					{% else %}
-    						{{ groupe.scenariste.username }}
+    						{{ groupe.scenariste.etatCivil }}
     					{% endif %}
     				</p>
     				<p class="list-group-item-text">
