--- a/src/LarpManager/Views/groupe/fragment/scenariste.twig
+++ b/src/LarpManager/Views/groupe/fragment/scenariste.twig
@@ -1,2 +1,2 @@
-Votre scénariste est {{ scenariste.username }} ({{ scenariste.email }}).
+Votre scénariste est {{ scenariste.etatCivil }} ({{ scenariste.email }}).
 <a href="#">Envoyer un mail à votre scénariste</a>&nbsp;<span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
