--- a/src/LarpManager/Views/public/personnage/fragment/info.twig
+++ b/src/LarpManager/Views/public/personnage/fragment/info.twig
@@ -35,7 +35,7 @@
 			<li class="list-group-item">
 				Ce personnage est sensible.
 				<a role="button" data-toggle="collapse" href="#sensibility" aria-expanded="false" aria-controls="collapseExample">
-					<i class="fa fa-question" aria-hidden="true"></i>
+					<i class="fa fa-info-circle" aria-hidden="true"></i>
 				</a>
 				<div class="collapse" id="sensibility">
 					<div class="list-group">
