--- a/src/LarpManager/Views/admin/groupe/fragment/domaine.twig
+++ b/src/LarpManager/Views/admin/groupe/fragment/domaine.twig
@@ -87,7 +87,7 @@
                         </a></h6>
                         <div class="collapse" id="initiative-{{ session.gn }}">
                             <div class="list-group">
-                                <p class="list-group-item">1 point d’initiative par carte ressource ou pièce d’or inutilisée à autre chose dans l’enveloppe de retour du groupe.</p>
+                                <p class="list-group-item">1 point d’initiative par carte ressource (les Poissons comptent double), carte d'Ingrédient ou pièce d’or inutilisée à autre chose dans l’enveloppe de retour du groupe.</p>
                             </div>
                         </div>
                     </div>
