--- a/src/LarpManager/Views/admin/personnage/detail.twig
+++ b/src/LarpManager/Views/admin/personnage/detail.twig
@@ -98,18 +98,18 @@
 										{% if participant.personnage %}
 											{% if participant.groupeGn %}
 												{% if participant.groupeGn.groupe %}
-													<a class="list-group-item" href="{{ path('groupe.detail', {'index': participant.groupeGn.groupe.id}) }}">{{ participant.personnage.nom }} - {{ participant.gn }} - #{{ participant.groupeGn.groupe.numero }} {{ participant.groupeGn.groupe.nom }}</a>
+													<a class="list-group-item" href="{{ path('groupe.detail', {'index': participant.groupeGn.groupe.id}) }}">#{{ participant.personnage.id}} {{ participant.personnage.nom }} - {{ participant.gn }} - #{{ participant.groupeGn.groupe.numero }} {{ participant.groupeGn.groupe.nom }}</a>
 												{% else %}
 													<a class="list-group-item">{{ participant.personnage.nom }} - {{ participant.gn }} - N'est pas lié à un groupe</a>
 												{% endif %}
 											{% else %}
-												<a class="list-group-item">{{ participant.personnage.nom }} - {{ participant.gn }} - N'est pas lié à un groupe</a>
+												<a class="list-group-item">#{{ participant.personnage.id}} {{ participant.personnage.nom }} - {{ participant.gn }} - N'est pas lié à un groupe</a>
 											{% endif %}
 										{% else %}
 											{% if participant.groupeGn %}
-												<a class="list-group-item">Personnage {{ personnage.nom }} non récupéré - {{ participant.gn }} - #{{ participant.groupeGn.groupe.numero }} {{ participant.groupeGn.groupe.nom }}</a>
+												<a class="list-group-item">Personnage #{{ personnage.id }} {{ personnage.nom }} non récupéré - {{ participant.gn }} - #{{ participant.groupeGn.groupe.numero }} {{ participant.groupeGn.groupe.nom }}</a>
 											{% else %}
-												<a class="list-group-item">Personnage {{ personnage.nom }} non récupéré - {{ participant.gn }} - N'est pas lié à un groupe</a>
+												<a class="list-group-item">Personnage #{{ personnage.id }} {{ personnage.nom }} non récupéré - {{ participant.gn }} - N'est pas lié à un groupe</a>
 											{% endif %}
 										{% endif %}
 									{% endfor %}
