--- a/src/LarpManager/Views/public/priere/detail.twig
+++ b/src/LarpManager/Views/public/priere/detail.twig
@@ -16,10 +16,12 @@
 	<div class="header">
 		<h5>{{ priere.sphere.label }} - Niveau {{ priere.niveau }} ({{ priere.label }})</h5>
 	</div>
-		
-	<object type="application/pdf" width="100%" height="1200px" >
-		<param name="src" value="{{ path('participant.priere.document',{'participant': participant.id, 'priere': priere.id, 'filename': filename}) }}" />
-		<p>Si le PDF n'apparait pas correctement dans votre navigateur, <a href="{{ path('participant.priere.document',{'participant': participant.id, 'priere': priere.id, 'filename': filename}) }}">cliquez ici</a> pour télécharger le fichier.</p>
+
+	<div class="list-group-item">
+		Si le PDF n'apparait pas correctement dans votre navigateur, <a href="{{ path('participant.priere.document',{'participant': participant.id, 'priere': priere.id, 'filename': filename}) }}">cliquez ici</a> pour télécharger le fichier.
+	</div>
+			
+	<object type="application/pdf" width="100%" height="1200px" data="{{ path('participant.priere.document',{'participant': participant.id, 'priere': priere.id, 'filename': filename}) }}">
 	</object>
 
 </div>
