--- a/src/LarpManager/Views/public/rule/detail.twig
+++ b/src/LarpManager/Views/public/rule/detail.twig
@@ -18,11 +18,11 @@
 	</div>
 	
 	<blockquote>{{ regle.description|markdown }}</blockquote>
-	
-	<object type="application/pdf" width="100%" height="1200px" >
-		<param name="src" value="{{ path('participant.regle.document',{'participant': participant.id, 'rule' :regle.id}) }}" />
-	 
-		<p>It appears your Web browser is not configured to display PDF files. No worries, just <a href="{{ path('participant.regle.document',{'participant': participant.id, 'rule' : regle.id}) }}">click here to download the PDF file.</a></p>
+
+	<div class="list-group-item">
+		Si le PDF n'apparait pas correctement dans votre navigateur, <a href="{{ path('participant.regle.document',{'participant': participant.id, 'rule': regle.id}) }}">cliquez ici</a> pour télécharger le fichier.
+	</div>
+	<object type="application/pdf" width="100%" height="1200px" data="{{ path('participant.regle.document',{'participant': participant.id, 'rule': regle.id}) }}">
 	</object>
 
 </div>
