--- a/src/LarpManager/Views/admin/document/detail.twig
+++ b/src/LarpManager/Views/admin/document/detail.twig
@@ -12,13 +12,10 @@
 	
 	<div class="row">
 		<div class="col-md-8">
-			<object type="application/pdf" width="100%" height="800px" >
-			   <param name="src" value="{{ path('document.get',{'document': document.documentUrl}) }}" />
-			 
-			   <p>It appears your Web browser is not configured to display PDF files.
-			      No worries, just <a href="{{ path('document.get',{'document': document.documentUrl}) }}">click here to download the PDF file.</a>
-			   </p>
- 
+			<object type="application/pdf" width="100%" height="800px" data="{{ path('document.get',{'document': document.documentUrl}) }}">
+			   <div class="well">
+			   	Si le PDF n'apparait pas correctement dans votre navigateur, <a href="{{ path('document.get',{'document': document.documentUrl}) }}">cliquez ici</a> pour télécharger le fichier.
+			   </div>
 			</object>
 		</div>
 		<div class="col-md-4">
