--- a/src/LarpManager/Views/public/sort/detail.twig
+++ b/src/LarpManager/Views/public/sort/detail.twig
@@ -20,10 +20,12 @@
 	<blockquote>{{ sort.description|markdown }}</blockquote>
 	
 	<center><h6>Coût en Perles : {% if sort.domaine in participant.personnage.domaines %}{{ sort.niveau + 1 }}{% else %}{{ sort.niveau + 2 }}{% endif %}</h6></center>
-	
-	<object type="application/pdf" width="100%" height="1200px" >
-		<param name="src" value="{{ path('participant.sort.document',{'participant': participant.id, 'sort' :sort.id, 'filename': filename}) }}" />
-		<p>Si le PDF n'apparait pas correctement dans votre navigateur, <a href="{{ path('participant.sort.document',{'participant': participant.id, 'sort' :sort.id, 'filename': filename}) }}">cliquez ici</a> pour télécharger le fichier.</p>
+
+	<div class="list-group-item">
+		Si le PDF n'apparait pas correctement dans votre navigateur, <a href="{{ path('participant.sort.document',{'participant': participant.id, 'sort' :sort.id, 'filename': filename}) }}">cliquez ici</a> pour télécharger le fichier.
+	</div>
+		
+	<object type="application/pdf" width="100%" height="1200px" data="{{ path('participant.sort.document',{'participant': participant.id, 'sort' :sort.id, 'filename': filename}) }}">
 	</object>
 
 </div>
