Correction de bug à l'init de l'env
Fix #433

--- a/src/LarpManager/Views/admin/groupe/fragment/detail.twig
+++ b/src/LarpManager/Views/admin/groupe/fragment/detail.twig
@@ -3,7 +3,7 @@
 	<div class="col-md-6">
 		<h6><i class="fa fa-circle"></i> Description <small>(Visible par tous)</small></h6>
 		
-		<div class="white-box">
+		<div class="white-box" style="overflow: auto">
 			{% if not groupe.description %}
 				<i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
 		    	Attention, ce groupe n'a pas de description.
