--- a/src/LarpManager/Views/admin/stock/objet/list.twig
+++ b/src/LarpManager/Views/admin/stock/objet/list.twig
@@ -98,7 +98,7 @@
 									</a>
 								</div>
 							{% else %}
-			  					aucune photo
+			  					aucune phoo
 			  				{% endif %}
 			  			</td>
 	 					<td>{{ objet.description }}</td>
