Ajout du BG personnage sur la fiche
Si le BG existe et est disponible pour sa visibilité, il sera affiché sur la fiche de détail du personnage

--- a/src/LarpManager/Views/public/personnage/detail.twig
+++ b/src/LarpManager/Views/public/personnage/detail.twig
@@ -104,6 +104,7 @@
 					{% include 'public/personnage/fragment/politique.twig' with {'personnage': personnage, 'participant': participant, 'lois': lois} %}
 					{% include 'public/personnage/fragment/priere.twig' with {'personnage': personnage, 'participant': participant} %}
 					{% include 'public/personnage/fragment/religion.twig' with {'personnage': personnage, 'participant': participant} %}
+					{% include 'public/personnage/fragment/background.twig' with {'personnage': personnage, 'participant': participant} %}
 				</div>
 			</div>
 
